tdf#83360 avoid inconsistent connector path data

When loading/importing connectors from ODF format, use the available path
data _only_ if the redundant data of start and end point coordinates of
path start/end and connector start/end is equal. This is to avoid using errorneous
or inconsistent path data at import of foreign formats. LibO itself always
writes out a consistent data set. Not using it when there is inconsistency
is okay since the path data is completely redundant, just to avoid recalculation
of the connector's layout at load time, no real information would be lost.
A 'connected' end has prio to direct coordinate data in Start/EndPosition
to the path data.

Change-Id: Id5aff0889e1e61112b6185f2384b7922f90a16a9